[package]
name = "bastion-plus-winit"
version = "0.1.0"
authors = ["Andreas Monitzer <a.monitzer@dungeonfog.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = { git = "https://github.com/bastion-rs/bastion.git", branch = "master" }
winit = "0.22"
log = "0.4"
fern = "0.6"
chrono = "0.4"
